Prepare for PyPI (#4)
* Prepare for PyPI

* Switch to Poetry for package management
* Add black for code formatting
* Add license (MIT)
* Declare support for Django ^2.1 and Python ^3.6
* Make Django Rest Framework an optional dependency
* Add the "drf" extra to install Django Rest Framework
* Remove tox test runner

* Fix travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
-sudo: false
+dist: xenial
 language: python
 python:
-  - "2.7"
-  - "3.5"
-install: pip install tox-travis
-script: tox
-branches:
-  only:
-    - master
-matrix:
+  - "3.6"
+  - "3.7"
+install:
+  - pip install poetry
+  - poetry install -E drf
+script: poetry run pytest --cov
+jobs:
   fast_finish: true
